# build-engineering

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  pysort.py
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
lib/: core.cpp  py.cpp  pysort.py  sort.cpp  sort.h
scripts/fedora/: install-deps.sh  pack.sh
scripts/macos/: install-deps.sh  pack.sh
scripts/ubuntu/: pack.sh
scripts/windows/: pack.ps1
test/: test_pysort.py  test_sorting.cpp
